--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,9 @@ pytest-django = "4.5.2"
 python-dotenv = "^1.0.1"
 black = "^24.3.0"
 flake8 = "^7.0.0"
+pytest-cov = "4.0.0"
+factory-boy = "^3.3.0"
+pytest-factoryboy = "^2.7.0"
 
 
 [build-system]
