--- a/pytest.ini
+++ b/pytest.ini
@@ -1,3 +1,10 @@
 [pytest]
 DJANGO_SETTINGS_MODULE = dw_blog_django.settings.development
-python_files = test_*.py
+python_files = test_*.py !*__init__.py
+norecursedirs = .git .env .vscode .pytest_cache htmlcov
+addopts = --cov=.
+          --cov-config=.coveragerc
+          --cov-report=html:htmlcov
+          --cov-report=term-missing
+          --cov-fail-under=80
+          --no-cov-on-fail
