--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,8 @@ flake8 = "^7.0.0"
 pytest-cov = "4.0.0"
 factory-boy = "^3.3.0"
 pytest-factoryboy = "^2.7.0"
+pip = "^24.0"
+psycopg2 = "^2.9.9"
 
 
 [build-system]
