--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,13 +9,15 @@ services:
       context: .
       args:
         ENVIRONMENT: DEVELOPMENT
-    command: poetry run python -Wd manage.py runserver 0.0.0.0:8000
+    command: poetry run python manage.py runserver 0.0.0.0:8000
     ports:
       - 8000:8000
     env_file:
       - .env
     depends_on:
       - postgresdb
+    volumes:
+      - .:/code
 
   postgresdb:
     image: postgres:14.3-bullseye
@@ -25,7 +27,7 @@ services:
     ports:
       - '5432:5432'
     volumes:
-      - postgres_data:/var/lib/postgresql/data
+      - postgresdb:/var/lib/postgresql/data
 
   adminer:
     image: adminer
@@ -34,4 +36,5 @@ services:
       - 9000:8080
 
 volumes:
-  postgres_data: {}
+  postgresdb:
+    driver: local
