--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ factory-boy = "^3.3.0"
 pytest-factoryboy = "^2.7.0"
 pip = "^24.0"
 psycopg2 = "^2.9.9"
+django-autoreload = "^0.1.1"
 
 
 [build-system]
