--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ pytest-factoryboy = "^2.7.0"
 pip = "^24.0"
 psycopg2 = "^2.9.9"
 django-autoreload = "^0.1.1"
+django-taggit = "^5.0.1"
 
 
 [build-system]
